15752
the script file **removedups.scala**:
```scala
for (
    line <- scala.io.Source.fromFile("buildfile", "UTF-8").getLines;
    if line.trim.startsWith("compile.with")
) {
      val result = line.trim.substring("compile.with".length).split(",").distinct
      println("count:%d, content:%s".format(result.length, result.mkString(", ")) )
}
```

itang@itang-laptop:~/workspace/exec$$ **scala removedups.scala**
```scala
(fragment of removedups.scala):2: error: type mismatch;
 found   : java.lang.String("buildfile")
 required: java.io.File
    line <- scala.io.Source.fromFile("buildfile", "UTF-8").getLines;
                                      ^
one error found
```

itang@itang-laptop:~/workspace/exec$$ **scala**
```scala
Welcome to Scala version *2.8.1.RC3* (Java HotSpot(TM) Server VM, Java 1.6.0_22).
Type in expressions to have them evaluated.
Type :help for more information.

scala> *:load ./removedups.scala*
Loading ./removedups.scala...
count:87, content: 'javax.mail:mail:jar:1.4.3', 'org.springframework:spring-jdbc:jar:3.0.4.RELEASE', 
  ......
```
scala> 
